@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

!define ENTITY class
!define VIEWMODEL class
!define CONTROLLER class

' Define classes
ENTITY Thread {
    +ThreadId
    +ThreadTitle
    +ThreadCategory
    +ThreadCreatedAt
    +ThreadBody
    +UserId
}

ENTITY Comment {
    +CommentId
    +CommentBody
    +CommentCreatedAt
    +ThreadId
    +UserId
    +ParentCommentId
}

VIEWMODEL ThreadViewModel {
    +ThreadTitle
    +ThreadCategory
    +ThreadBody
}

VIEWMODEL CommentViewModel {
    +CommentBody
}

CONTROLLER ThreadController {
    +Create(ThreadViewModel)
    +Edit(int, ThreadViewModel)
    +Delete(int)
    +Details(int)
    +List()
}

CONTROLLER CommentController {
    +Create(int, CommentViewModel)
    +Edit(int, CommentViewModel)
    +Delete(int)
    +Details(int)
}

' Relationships
Thread --|> Comment : Contains
ThreadController --|> Thread : Manages
CommentController --|> Comment : Manages

@enduml


@enduml